--- a/src/componenets/PageTitle/PageTitle.module.scss
+++ b/src/componenets/PageTitle/PageTitle.module.scss
@@ -10,7 +10,7 @@
     margin-top: 1rem;
     height: 1px;
     width: 18rem;
-    background-color: #00dcff;
+    background-color: var(--color-primary);
   }
 }
 .icon {
