--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,3 +1,74 @@
-.continer {
-  color: antiquewhite;
+.introductionContainer {
+  display: grid;
+  height: 60vh;
+  margin-top: 2rem;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: min-content min-content 10rem;
+  grid-gap: 3.5rem;
+}
+
+.image {
+  grid-column: 1/3;
+  grid-row: 1/4;
+  width: 100%;
+
+  height: 100%;
+  object-fit: cover;
+  display: block;
+
+  box-shadow: 0 0 0.7rem var(--color-primary-light);
+  border-radius: 2px;
+}
+.about {
+  grid-column: 3/-1;
+  grid-row: 1/2;
+}
+
+.aboutText {
+  color: var(--color-primary-light);
+  font-size: 3rem;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 400;
+}
+
+.aboutStatus {
+  font-size: 3rem;
+  font-weight: 100;
+  color: var(--color-grey);
+  font-family: var(--font-secondary);
+}
+.aboutGuns {
+  grid-column: 3/-1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2rem;
+
+  &__innercontainer {
+    border-left: 3px solid var(--color-primary);
+    padding-left: 1rem;
+  }
+
+  &__head {
+    font-family: var(--font-primary);
+    letter-spacing: 0.2rem;
+    font-size: 1.7rem;
+    font-weight: 400;
+    padding-bottom: 1rem;
+  }
+
+  &__value {
+    font-family: var(--font-tertiary);
+    font-size: 1.7rem;
+    font-weight: 300;
+    font-style: italic;
+  }
+}
+
+.Objective {
+  grid-column: 3 / -1;
+  font-size: 2rem;
+  font-weight: 300;
+  font-family: var(--font-primary);
+  font-style: italic;
+  line-height: 3rem;
 }
