--- a/src/pages/landing/Landing.module.scss
+++ b/src/pages/landing/Landing.module.scss
@@ -23,6 +23,7 @@
     margin: 0;
     background-color: rgba(0, 0, 0, 0.75);
     align-items: center;
+    box-shadow: 0 0 1rem var(--color-primary);
   }
 }
 .heading1 {
@@ -86,7 +87,7 @@
   }
   > span {
     font-style: italic;
-    color: #00dcff;
+    color: var(--color-primary);
   }
 }
 ul,
@@ -108,7 +109,6 @@ a {
   }
 }
 .list {
-  padding: 2rem;
   height: fit-content;
   transition: all 0.2s;
 
@@ -143,13 +143,15 @@ a {
 
   &:hover {
     transform: translateY(-1rem);
-    color: #00dcff;
+    color: var(--color-primary);
     background-color: #52525257;
   }
 }
 .link {
   font-family: "Caveat", cursive;
   font-size: 2rem;
+  padding: 2rem;
+  display: inline-block;
   color: inherit;
 }
 
@@ -185,11 +187,11 @@ a {
   20% {
     opacity: 1;
     background-color: #52525257;
-    color: #00dcff;
+    color: var(--color-primary);
   }
   80% {
     background-color: #52525257;
-    color: #00dcff;
+    color: var(--color-primary);
   }
   100% {
     opacity: 1;
