--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,3 +1,30 @@
+:root {
+  --color-primary: #02c2e0;
+  --color-primary-light: #00fff3;
+  --color-primary-dark: #005bff;
+  --color-primary-mild: #4a93a7;
+
+  --color-grey: #bababa;
+
+  --font-primary: "Roboto", sans-serif;
+  --font-secondary: "Caveat", cursive;
+  --font-tertiary: "Ubuntu", sans-serif;
+
+  // --color-grey-light-1: #faf9f9;
+  // --color-grey-light-2: #f4f2f2;
+  // --color-grey-light-3: #f0eeee;
+  // --color-grey-light-4: #ccc;
+
+  // --color-grey-dark-1: #333;
+  // --color-grey-dark-2: #777;
+  // --color-grey-dark-3: #999;
+
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+
+  --line: 1px solid var(--color-grey-light-2);
+}
+
 *,
 *::after,
 *::before {
