resume section completed

--- a/src/componenets/PageContainer/PageContainer.module.scss
+++ b/src/componenets/PageContainer/PageContainer.module.scss
@@ -1,12 +1,101 @@
 .container {
   background-color: rgba(0, 0, 0, 0.75);
   width: 80%;
+  height: 100%;
   margin: auto;
-  margin-top: 3rem;
+  margin-top: 12rem;
+  margin-bottom: 5rem;
   padding: 3rem;
   border-radius: 3px;
-  animation: opacity ease-in-out 0.5s;
+  animation: opacity ease-in 0.3s, flick 10s infinite;
   box-shadow: 0 0 1rem var(--color-primary);
+}
+
+@keyframes flick {
+  0% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  4% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  5% {
+    box-shadow: none;
+  }
+  7% {
+    box-shadow: none;
+  }
+  7.5% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  8% {
+    box-shadow: none;
+  }
+  8.5% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  9% {
+    box-shadow: none;
+  }
+  11% {
+    box-shadow: none;
+  }
+  12% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  16% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  17% {
+    box-shadow: none;
+  }
+  18% {
+    box-shadow: none;
+  }
+  19% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  21% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  22% {
+    box-shadow: none;
+  }
+  27% {
+    box-shadow: none;
+  }
+  28% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  29% {
+    box-shadow: none;
+  }
+  30% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  31% {
+    box-shadow: none;
+  }
+  32% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  32.5% {
+    box-shadow: none;
+  }
+  33% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  33.5% {
+    box-shadow: none;
+  }
+  34% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  95% {
+    box-shadow: 0 0 1rem var(--color-primary);
+  }
+  100% {
+    box-shadow: none;
+  }
 }
 
 @keyframes opacity {
