--- a/src/componenets/SecondaryTitle/SecondaryTitle.module.scss
+++ b/src/componenets/SecondaryTitle/SecondaryTitle.module.scss
@@ -1,5 +1,5 @@
 .secondHeader {
-  text-shadow: 0.2rem 0.2rem var(--color-primary-dark);
+  text-shadow: 0.2rem 0.2rem 0.4rem var(--color-primary-dark);
   text-transform: uppercase;
   font-size: 4rem;
 }
