--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,10 +1,13 @@
 .introductionContainer {
   display: grid;
-  height: 60vh;
+  height: 100%;
   margin-top: 2rem;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: min-content min-content 10rem;
   grid-gap: 3.5rem;
+}
+.spaceAbove {
+  margin-top: 1rem;
 }
 
 .image {
@@ -65,10 +68,71 @@
 }
 
 .Objective {
-  grid-column: 3 / -1;
+  grid-column: 3 / 8;
   font-size: 2rem;
   font-weight: 300;
   font-family: var(--font-primary);
   font-style: italic;
   line-height: 3rem;
+}
+
+.skills {
+  grid-column: 1/-1;
+  margin-top: 2rem;
+}
+.skillContainer {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 5rem;
+}
+
+.skill {
+  background-color: #33333387;
+  box-shadow: 0 0 0.5rem var(--color-primary-light);
+  border-radius: 2px;
+  display: flex;
+  transition: all 0.2s cubic-bezier(1, -0.05, 0.54, 0.47);
+
+  .skill__icon {
+    font-size: 3rem;
+    color: white;
+    transition: all 0.2s ease-in;
+
+    &Container {
+      padding: 1rem;
+      background-color: var(--color-primary);
+      border-radius: 2px;
+      display: flex;
+      justify-content: center;
+      margin: 1rem;
+      width: fit-content;
+    }
+
+    &Legend {
+      font-family: var(--font-secondary);
+      font-size: 2rem;
+      font-weight: 600;
+      margin: auto 1rem;
+      letter-spacing: 1px;
+      color: var(--color-primary);
+    }
+  }
+  &:hover {
+    background-color: #01a5bf;
+    box-shadow: 0 0 1rem #304f58;
+    transform: scale(1.05);
+
+    .skill__icon {
+      color: var(--color-primary);
+
+      &Container {
+        background-color: white;
+      }
+
+      &Legend {
+        color: white;
+      }
+    }
+  }
 }
