--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -5,10 +5,12 @@
   --color-primary-mild: #4a93a7;
 
   --color-grey: #bababa;
+  --color-grey-dark: #5f5f5f;
 
   --font-primary: "Roboto", sans-serif;
   --font-secondary: "Caveat", cursive;
   --font-tertiary: "Ubuntu", sans-serif;
+  --font-quaternary: "Rajdhani", sans-serif;
 
   // --color-grey-light-1: #faf9f9;
   // --color-grey-light-2: #f4f2f2;
