--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -119,8 +119,8 @@
     }
   }
   &:hover {
-    background-color: #01a5bf;
-    box-shadow: 0 0 1rem #304f58;
+    background-color: #131313ba;
+    box-shadow: 0 0 0.6rem var(--color-primary-light);
     transform: scale(1.05);
 
     .skill__icon {
