contact section completed route and basic styles updated

--- a/src/componenets/footer/Footer.module.scss
+++ b/src/componenets/footer/Footer.module.scss
@@ -1,13 +1,14 @@
 .span {
   color: var(--color-primary);
-  font-size: 2rem;
+  font-size: 1.75rem;
   font-family: "Caveat";
 }
 .text {
-  font-size: 1.25rem;
+  font-size: 1.75rem;
+  font-family: monospace;
 }
 .container {
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   margin-right: 4rem;
