--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   background-image: linear-gradient(
-      to right,
+      to right bottom,
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.9)
     ),
