--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -14,7 +14,6 @@
   grid-template-columns: 5rem 1fr;
   grid-column-gap: 3rem;
   align-items: center;
-  text-transform: capitalize;
   font-size: 1.5rem;
   color: var(--color-grey);
   box-shadow: 0 0 0.5rem var(--color-primary-light);
@@ -55,6 +54,9 @@
     }
   }
 }
+.contactDetail {
+  text-transform: capitalize;
+}
 
 @keyframes scale {
   50% {
@@ -64,4 +66,78 @@
 }
 .writeToMe {
   margin-top: 5rem;
+}
+.textHeadWrite {
+  font-weight: 100;
+  font-size: 2.5rem;
+  text-align: center;
+  padding: 4rem 0;
+  line-height: 4rem;
+  font-variant: petite-caps;
+}
+.writeContainer {
+  background: #33333387;
+  width: 60vw;
+  margin: 4rem auto;
+  padding-bottom: 5rem;
+  box-shadow: 0 0 4px var(--color-primary-light);
+}
+.formContainer {
+  display: grid;
+  grid-template-columns: minmax(20rem, 50rem);
+  margin: auto;
+  grid-gap: 1rem;
+  justify-content: center;
+  width: 70%;
+}
+.inputs {
+  font-size: 2.5rem;
+  padding: 0.75rem;
+  font-family: var(--font-quaternary);
+  border: none;
+  outline: none;
+  background: #4a93a754;
+  color: rgb(220, 220, 220);
+  transition: all 0.2s;
+  text-align: center;
+  border: 1px solid var(--color-primary-dark);
+  &:active,
+  &:focus {
+    border-left: 4px solid var(--color-primary) !important;
+  }
+
+  &:placeholder-shown {
+    font-size: 2rem;
+    padding: 1rem;
+    text-align: center;
+    font-family: cursive;
+    color: gray;
+  }
+}
+
+.button {
+  width: 15rem;
+  height: 5rem;
+  margin: 2rem auto;
+  outline: none;
+  border: none;
+  /* float: right; */
+  font-weight: 500;
+  background-color: #5e5e5e;
+  font-family: var(--font-primary);
+  font-size: 1.75rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: white;
+  transition: all 0.2s ease-out;
+  &:hover {
+    background-color: #02c2e0cc !important;
+    transform: scaleX(1.05);
+    box-shadow: 3px 3px 3px var(--color-grey-dark);
+  }
+  &:active {
+    transform: scaleX(1.02);
+    box-shadow: 1.5px 1.5px 3px var(--color-grey-dark);
+    background-color: #049cb3cc !important;
+  }
 }
