--- a/src/pages/landing/Landing.module.scss
+++ b/src/pages/landing/Landing.module.scss
@@ -28,6 +28,20 @@
     box-shadow: 0 0 1rem var(--color-primary);
   }
 }
+.headingHome {
+  position: relative;
+
+  & span:first-child {
+    animation: glitch 1s 5;
+    animation-delay: 1s;
+    // clip-path: polygon(0 13%, 100% 13%, 100% 13%, 0 13%);
+    // transform: translateX(-1rem);
+  }
+  & span:last-child {
+    animation: glitch 0.6s 5;
+    animation-delay: 1s;
+  }
+}
 .heading1 {
   font-size: 6rem;
   font-weight: 500;
@@ -45,13 +59,10 @@
   // animation: glitch 1s infinite;
   & span {
   }
-
   & span:first-child {
     position: absolute;
     top: 0;
     left: 0;
-    animation: glitch 1s 5;
-    animation-delay: 1s;
     z-index: 10;
     // clip-path: polygon(0 13%, 100% 13%, 100% 13%, 0 13%);
     // transform: translateX(-1rem);
@@ -60,11 +71,8 @@
     position: absolute;
     top: 0;
     left: 0;
-    animation: glitch 0.6s 5;
-    animation-delay: 1s;
     z-index: 20;
   }
-
   &__active {
     animation: none;
     grid-column: 2/3;
@@ -158,7 +166,9 @@
   display: inline-block;
   color: inherit;
 }
-
+.LinkActive {
+  color: var(--color-primary);
+}
 @keyframes left {
   0% {
     opacity: 0;
