--- a/src/componenets/CertificateCard/CertificateCard.module.scss
+++ b/src/componenets/CertificateCard/CertificateCard.module.scss
@@ -67,12 +67,12 @@
   // }
 }
 .bhead {
-  font-size: 2.5rem;
-  font-family: var(--font-primary);
+  font-size: 2.8rem;
+  font-family: var(--font-secondary);
   font-weight: 500;
-  padding: 0 1rem;
+  padding: 0 2rem;
   text-align: center;
-  color: var(--color-grey);
+  color: white;
 }
 .detailsContainer {
   height: 100%;
