--- a/src/componenets/footer/Footer.module.scss
+++ b/src/componenets/footer/Footer.module.scss
@@ -1,15 +1,20 @@
 .span {
   color: var(--color-primary);
-  font-size: 1.75rem;
+  font-size: 2.2rem;
   font-family: "Caveat";
+  font-variant: titling-caps;
 }
 .text {
   font-size: 1.75rem;
-  font-family: monospace;
+  font-variant: small-caps;
 }
 .container {
   position: fixed;
   right: 0;
   bottom: 0;
+  padding: 0.25rem 1.5rem;
   margin-right: 4rem;
+  background-color: black;
+  border-radius: 2px;
+  margin-bottom: 1rem;
 }
