--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,17 +1,23 @@
+@import "../../sass/variables";
+
 .introductionContainer {
   display: grid;
   height: 100%;
   margin-top: 2rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: min-content min-content 10rem;
+  grid-template-columns: minmax(30rem, 35rem) 1fr;
+  grid-template-rows: min-content min-content max-content;
   grid-gap: 3.5rem;
+
+  @media only screen and (max-width: $bp-medium-small) {
+    grid-template-columns: 1fr minmax(20rem, 25rem) 1fr 1fr;
+  }
 }
 .spaceAbove {
   margin-top: 1rem;
 }
 
 .image {
-  grid-column: 1/3;
+  grid-column: 1/2;
   grid-row: 1/4;
   width: 100%;
 
@@ -21,10 +27,26 @@
 
   box-shadow: 0 0 0.7rem var(--color-primary-light);
   border-radius: 2px;
+
+  @media only screen and (max-width: $bp-largest) {
+    grid-row: 1/3;
+  }
+  @media only screen and (max-width: $bp-medium-small) {
+    grid-row: 1/2;
+    grid-column: 1/4;
+  }
+  @media only screen and (max-width: $bp-smallest) {
+    grid-column: 1/-1;
+  }
 }
 .about {
-  grid-column: 3/-1;
+  grid-column: 2/-1;
   grid-row: 1/2;
+
+  @media only screen and (max-width: $bp-medium-small) {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+  }
 }
 
 .aboutText {
@@ -41,14 +63,31 @@
   font-family: var(--font-secondary);
 }
 .aboutGuns {
-  grid-column: 3/-1;
+  grid-column: 2 /-1;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 2rem;
 
+  @media only screen and (max-width: $bp-large) {
+    grid-template-columns: 1fr 1fr;
+  }
+  @media only screen and (max-width: $bp-medium-small) {
+    grid-column: 1/-1;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media only screen and (max-width: $bp-micro) {
+    grid-template-columns: 1fr;
+  }
+
   &__innercontainer {
     border-left: 3px solid var(--color-primary);
     padding-left: 1rem;
+    background-color: #8f8f8f17;
+    padding: 1rem;
   }
 
   &__head {
@@ -68,12 +107,16 @@
 }
 
 .Objective {
-  grid-column: 3 / 8;
+  grid-column: 2 / -1;
   font-size: 2rem;
   font-weight: 300;
   font-family: var(--font-primary);
   font-style: italic;
   line-height: 3rem;
+
+  @media only screen and (max-width: $bp-largest) {
+    grid-column: 1 / -1;
+  }
 }
 
 .skills {
@@ -85,6 +128,18 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media only screen and (max-width: $bp-micro) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .skill {
