--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 :root {
   --color-primary: #02c2e0;
   --color-primary-light: #00fff3;
@@ -27,6 +29,12 @@
   --line: 1px solid var(--color-grey-light-2);
 }
 
+// $bp-largest: 75em; //1200px
+// $bp-large: 68.75em; //1100px
+// $bp-medium: 56.25em; //900px
+// $bp-small: 37.5em; //600px
+// $bp-smallest: 31.25em; //500px
+
 *,
 *::after,
 *::before {
@@ -37,6 +45,12 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  @media only screen and (max-width: $bp-large) {
+    font-size: 56.25%;
+  }
+  @media only screen and (max-width: $bp-medium) {
+    font-size: 50%;
+  }
   font-family: "Roboto", sans-serif;
 }
 
