--- a/src/componenets/footer/Footer.module.scss
+++ b/src/componenets/footer/Footer.module.scss
@@ -3,6 +3,7 @@
   font-size: 2.2rem;
   font-family: "Caveat";
   font-variant: titling-caps;
+  padding: 0 1rem;
 }
 .text {
   font-size: 1.75rem;
@@ -21,4 +22,6 @@
 }
 .icon {
   color: var(--color-primary);
+  padding: 0 1rem;
+  font-size: 2rem;
 }
