--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,8 @@ body {
       url(./assets/newgin-phone.jpeg);
   }
 }
+.particle-container{
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+}
