--- a/src/pages/landing/Landing.module.scss
+++ b/src/pages/landing/Landing.module.scss
@@ -13,10 +13,10 @@
     grid-template-columns: 5vw 1fr 1fr minmax(min-content, max-content) 5vw;
   }
   @media only screen and (max-height: $bp-small) {
-    grid-template-rows: 4rem max-content 1fr;
+    // grid-template-rows: 4rem max-content 1fr;
   }
   @media only screen and (max-height: $bp-smallest) {
-    grid-template-rows: 0rem max-content 1fr;
+    // grid-template-rows: 0rem max-content 1fr;
   }
 }
 .list__button {
@@ -168,7 +168,7 @@
       display: block;
       text-align: center;
       width: 100%;
-    }
+    } 
   }
 }
 
