--- a/src/App.scss
+++ b/src/App.scss
@@ -30,4 +30,9 @@ body {
   position: absolute;
   height: 100vh;
   width: 100vw;
+  // background-color: #5454543c;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+
 }
