--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -3,8 +3,8 @@
 :root {
   --color-primary: #02c2e0;
   --color-primary-light: #00fff3;
-  --color-primary-dark: #005bff;
-  --color-primary-mild: #4a93a7;
+  --color-primary-dark: #00a1ff;
+  --color-primary-mild: #528dbf;
 
   --color-grey: #bababa;
   --color-grey-dark: #5f5f5f;
@@ -27,6 +27,7 @@
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 
   --line: 1px solid var(--color-grey-light-2);
+  --container-box-shadow: 0 0 0.5rem 1px var(--color-primary-light);
 }
 
 // $bp-largest: 75em; //1200px
