--- a/src/componenets/CertificateCard/CertificateCard.module.scss
+++ b/src/componenets/CertificateCard/CertificateCard.module.scss
@@ -17,10 +17,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    border: 2px solid var(--color-primary);
+    border: 1px solid var(--color-primary);
   }
   &__back {
-    border: 2px solid var(--color-grey);
+    border: 1px solid var(--color-primary-light);
     transform: rotateY(180deg);
   }
   &:hover {
@@ -83,8 +83,9 @@
   font-size: 2rem;
   text-align: center;
   font-family: var(--font-teritary);
+  color: var(--color-primary-mild);
   padding: 0 1rem;
-  font-weight: 100;
+  font-weight: 500;
   line-height: 4rem;
 }
 .at {
@@ -93,8 +94,8 @@
   font-family: var(--font-quaternary);
   letter-spacing: 2px;
   font-weight: 700;
-  border-top: 2px solid;
-  border-bottom: 2px solid;
+  border-top: 2px solid var(--color-primary-mild);
+  border-bottom: 2px solid var(--color-primary-mild);
   color: #ffffff38;
   text-transform: uppercase;
 }
