--- a/src/componenets/ColorPallet/ColorPallet.module.scss
+++ b/src/componenets/ColorPallet/ColorPallet.module.scss
@@ -1,27 +1,34 @@
 .colorpalletContainer {
     position: fixed;
     bottom: 0;
-    margin: 2rem;
-    padding: 1rem 3rem;
+    margin: 5rem 2rem;
+    padding: 1rem 1rem;
     font-family: var(--font-quaternary);
     font-style: italic;
     letter-spacing: 1px;
     border-radius: 3px;
     font-size: 1.5rem;
-    background: linear-gradient(45deg, var(--color-primary) , var(--color-primary-mild));
-    box-shadow: 0rem 3px 5px black;
+    background-color: #1d1d1dab;
+    z-index: 200;
+    // background: linear-gradient(45deg, var(--color-primary) , var(--color-primary-mild));
+    box-shadow: 0rem 0 1rem var(--color-primary) ;
     
 }
 .colorpallet{
     font-weight: 600;
     cursor: pointer;
+    height: 2rem;
+    width: 2rem;
+    background-color: var(--color-primary);
+    border: 2px solid #fff;
+    border-radius: 50%;
 }
 .color{
     display: inline-block;
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
-    border: 2px solid white;
+    border: 2px solid #fff;
 }
 .palletContainer{
     margin: 1rem 0rem;
@@ -33,5 +40,5 @@
     }
 }
 .palletBoxContainer{
-    margin: 1rem;
+    // margin: 1rem;
 }
