color alterations and colors added

--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -110,7 +110,7 @@
   font-family: var(--font-quaternary);
   border: none;
   outline: none;
-  background: #4a93a754;
+  background: var(--color-primary-transparent);
   color: rgb(220, 220, 220);
   transition: all 0.2s;
   text-align: center;
