--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -5,6 +5,7 @@
   --color-primary-light: #00fff3;
   --color-primary-dark: #00a1ff;
   --color-primary-mild: #528dbf;
+  --color-primary-transparent: #4a93a754;
 
   --color-grey: #bababa;
   --color-grey-dark: #5f5f5f;
