--- a/src/componenets/SkillSet/SkillSet.module.scss
+++ b/src/componenets/SkillSet/SkillSet.module.scss
@@ -1,5 +1,5 @@
 .skill {
-  background-color: #33333387;
+  background-color: var(--color-container-grey);;
   box-shadow: var(--container-box-shadow);
   border-radius: 2px;
   display: flex;
