--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -10,6 +10,8 @@
   --color-grey: #bababa;
   --color-grey-dark: #5f5f5f;
 
+  --color-container-grey : #3a3a3aa1;
+
   --font-primary: "Roboto", sans-serif;
   --font-secondary: "Caveat", cursive;
   --font-tertiary: "Ubuntu", sans-serif;
