--- a/Client/src/componenets/footer/Footer.module.scss
+++ b/Client/src/componenets/footer/Footer.module.scss
@@ -1,14 +1,16 @@
 .span {
   color: var(--color-primary);
-  font-size: 2.2rem;
-  font-family: "Caveat";
-  font-variant: titling-caps;
-  padding: 0 1rem;
+  // font-size: 2.2rem;
+  // padding: 0 1rem;
 }
 .text {
   text-align: center;
   font-size: 1.75rem;
-  font-variant: small-caps;
+  letter-spacing: 2px;
+  padding: .5rem;
+  font-weight: 300;
+  letter-spacing: 2px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .container {
   position: fixed;
