--- a/Client/src/pages/Contact/Contact.module.scss
+++ b/Client/src/pages/Contact/Contact.module.scss
@@ -41,7 +41,7 @@
 .iconContainer {
   padding: 1.5rem;
   display: inline-block;
-  background-color: #333333;
+  background-color: var(--color-primary-transparent);
   border-radius: 50%;
   margin: auto;
 }
