--- a/Client/src/componenets/TimelineContent/TimelineContent.module.scss
+++ b/Client/src/componenets/TimelineContent/TimelineContent.module.scss
@@ -10,7 +10,7 @@
   padding: 0.6rem;
   font-family: var(--font-secondary);
   font-size: 2rem;
-  background-color: #2e2e2e;
+  background-color: var(--color-primary-transparent);
 }
 .summaryContent {
   font-family: var(--font-tertiary);
